# AURAYOUTH

./: .env  .env.example  Genaihackathoprd.txt  README.md  demo_multimodal.py  main.py  process flow.md  pyproject.toml  test_multimodal.py
.cph/: .D_1_Max_Sum_OR_Easy_Version.cpp_b3d4e3a43d8d4062e9d650b0c0b2ddef.prob  .E_Yet_Another_MEX_Problem.cpp_e6aad9bb4b777c8ec46a5a2b88cc7d93.prob
ai/: __init__.py  chatbot.py  digital_twin.py  emotion_recognition.py
auth/: security.py
database/: connection.py
frontend/: package.json
frontend/src/: App.css  App.jsx
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: Footer.css  Footer.jsx  Header.css  Header.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/pages/: Chat.css  Chat.jsx  CrisisSupport.css  CrisisSupport.jsx  Home.css  Home.jsx  Login.css  Login.jsx  Profile.css  Profile.jsx
